change link  in tours page, wrapped cards in link (deleted div), delete fix height in cards

--- a/css/main.css
+++ b/css/main.css
@@ -265,7 +265,7 @@ footer .logo {
     margin-bottom: 15px;
 }
 
-/* Inner page */
+/* Inner page tours */
 
 .inner-page-tours{
     padding-top: 60px;
@@ -321,35 +321,30 @@ footer .logo {
 
 .card.gray-color {
     width: 570px;
-    height: 435px;
 
     background-color: #A6A6A6;
 }
 
 .card.sand-color{
     width: 570px;
-    height: 435px;
 
     background-color: #C1B19B;
 }
 
 .card.blue-color{
     width: 670px;
-    height: 365px;
 
     background-color: #66B0BE;
 }
 
 .card.brown-color{
     width: 670px;
-    height: 365px;
 
     background-color: #876F56;
 }
 
 .card.green-color{
     width: 470px;
-    height: 760px;
 
     background-color: #27695E;
 }
@@ -375,3 +370,31 @@ footer .logo {
     position: relative;
     top: 6px;
  } 
+
+ /* Inner page extreme */
+
+.inner-page-extreme{
+    padding-top: 60px;
+    padding-bottom: 100px;
+
+    background-color: #F2F8F6;
+}
+
+.inner-page-extreme-row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.inner-page-extreme-nav {
+    width: 270px;
+    height: 373px;
+
+    background-color: #0AC883;
+}
+
+.inner-page-extreme-wrapper {
+    width: 771px;
+    height: 1475px;
+
+    background-color: #27695E;
+}
